# metadada

./: README.md  ci.dhall  default.nix  metadada.cabal  metadata.cabal  stack.yaml
app/: Dir.hs  Main.hs
nix/: token-registry.nix
src/: Metadada.hs
src/Metadada/: Types.hs
test/: Golden.hs
test/samples/: sample0.actual.json  sample1.expected.json  sample2.expected.json
