cabal-version:       2.2
name:                metadata
version:             0.1.0.0
synopsis:            Re-encode token registry metadata
homepage:            https://github.com/blockfrost/metadata
license:             Apache-2.0
license-file:        LICENSE
author:              blockfrost.io
maintainer:          srk@48.io
copyright:           2021 blockfrost.io
build-type:          Simple

extra-source-files:
    CHANGELOG.md
    LICENSE
    README.md

library
  hs-source-dirs:      src
  exposed-modules:     Metadada
                     , Metadada.Types
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , text
  default-language:    Haskell2010

executable metadata-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , metadata
  default-language:    Haskell2010

test-suite metadata-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Golden
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , metadata
                     , tasty
                     , tasty-golden
  build-tool-depends:
    tasty-discover:tasty-discover
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/blockfrost/metadata
